# pico-extended-boilerplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: FreeRTOSConfig.h
src/: main.cpp  main.pio
